--- a/index.html
+++ b/index.html
@@ -11,66 +11,111 @@
     .container { max-width: 400px; margin: 3em auto; background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 2px 8px #aaa; }
     label { font-weight: bold; }
     input[type="text"] { width: 100%; padding: 0.5em; margin: 1em 0; border: 1px solid #ccc; border-radius: 5px; }
-    button { width: 100%; padding: 0.75em; font-size: 1em; border-radius: 5px; border: none; background: #1976d2; color: #fff; cursor: pointer; }
+    button { width: 48%; padding: 0.75em; font-size: 1em; border-radius: 5px; border: none; background: #1976d2; color: #fff; cursor: pointer; }
     button:hover { background: #1565c0; }
     .qrbox { text-align: center; margin: 2em 0; }
     .linkbox { text-align: center; margin-bottom: 2em; }
+    .filebox, .acierbox { margin-bottom: 1em; }
+    .button-row { display: flex; justify-content: space-between; gap: 4%; }
+    .filename { text-align: center; font-size: 1.2em; font-weight: bold; margin-bottom: 1em; }
+    .aciertype { text-align: center; font-size: 1em; margin-top: 1em; color: #555; }
     @media print {
       body { background: #fff; }
       .container { box-shadow: none; }
-      button { display: none; }
+      .button-row { display: none; }
     }
   </style>
 </head>
 <body>
-  <!-- Page 1 : Saisie du lien -->
+  <!-- Page 1 : Saisie du lien + nom fichier + type acier -->
   <div class="container" id="page1">
     <form id="formLink">
-      <label for="inputLink">Colle ton lien ici :</label>
-      <input type="text" id="inputLink" placeholder="https://..." required>
-      <button type="submit">Valider</button>
+      <div class="filebox">
+        <label for="inputFile">Nom du fichier :</label>
+        <input type="text" id="inputFile" placeholder="ex : rapport-123.pdf" required>
+      </div>
+      <div class="acierbox">
+        <label for="inputAcier">Type d'acier :</label>
+        <input type="text" id="inputAcier" placeholder="ex : S235JR" required>
+      </div>
+      <div>
+        <label for="inputLink">Colle ton lien ici :</label>
+        <input type="text" id="inputLink" placeholder="https://..." required>
+      </div>
+      <button type="submit" style="width:100%">Valider</button>
     </form>
   </div>
 
-  <!-- Page 2 : Affichage QR Code -->
+  <!-- Page 2 : Affichage QR Code + infos -->
   <div class="container" id="page2" style="display:none;">
     <h2>Page à imprimer</h2>
+    <div class="filename" id="outFile"></div>
     <div class="qrbox" id="qrCode"></div>
+    <div class="aciertype" id="outAcier"></div>
     <div class="linkbox">
       <strong>Lien :</strong>
       <a id="outLink" href="" target="_blank" rel="noopener noreferrer"></a>
     </div>
-    <button onclick="window.print()">Imprimer cette page</button>
+    <div class="button-row">
+      <button onclick="window.print()">Imprimer cette page</button>
+      <button type="button" id="btnRetour">Retour</button>
+    </div>
   </div>
 
   <script>
     const form = document.getElementById('formLink');
-    const input = document.getElementById('inputLink');
+    const inputFile = document.getElementById('inputFile');
+    const inputAcier = document.getElementById('inputAcier');
+    const inputLink = document.getElementById('inputLink');
     const page1 = document.getElementById('page1');
     const page2 = document.getElementById('page2');
     const qrCodeDiv = document.getElementById('qrCode');
     const outLink = document.getElementById('outLink');
+    const outFile = document.getElementById('outFile');
+    const outAcier = document.getElementById('outAcier');
+    const btnRetour = document.getElementById('btnRetour');
 
     form.addEventListener('submit', function(e) {
       e.preventDefault();
-      const val = input.value.trim();
-      if (!val) return;
+      const fileVal = inputFile.value.trim();
+      const acierVal = inputAcier.value.trim();
+      const linkVal = inputLink.value.trim();
+      if (!fileVal || !acierVal || !linkVal) return;
       // Affiche la page 2
       page1.style.display = 'none';
       page2.style.display = 'block';
+      // Affiche le nom du fichier
+      outFile.textContent = fileVal;
       // Génère le QR code
       qrCodeDiv.innerHTML = '';
       new QRCode(qrCodeDiv, {
-        text: val,
+        text: linkVal,
         width: 200,
         height: 200,
         colorDark : "#000",
         colorLight : "#fff",
         correctLevel : QRCode.CorrectLevel.H
       });
+      // Affiche le type d'acier
+      outAcier.textContent = acierVal;
       // Affiche le lien
-      outLink.textContent = val;
-      outLink.href = val;
+      outLink.textContent = linkVal;
+      outLink.href = linkVal;
+    });
+
+    btnRetour.addEventListener('click', function() {
+      // Remet la page 1 et nettoie la page 2
+      page2.style.display = 'none';
+      page1.style.display = 'block';
+      outFile.textContent = '';
+      qrCodeDiv.innerHTML = '';
+      outAcier.textContent = '';
+      outLink.textContent = '';
+      outLink.href = '';
+      // Option : garder les valeurs saisies ou vider les champs
+      // inputFile.value = '';
+      // inputAcier.value = '';
+      // inputLink.value = '';
     });
   </script>
 </body>
