--- a/index.html
+++ b/index.html
@@ -7,22 +7,42 @@
   <!-- Librairie QRCode.js via CDN -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; }
+    body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; }
     .container { max-width: 400px; margin: 3em auto; background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 2px 8px #aaa; }
     label { font-weight: bold; }
     input[type="text"] { width: 100%; padding: 0.5em; margin: 1em 0; border: 1px solid #ccc; border-radius: 5px; }
     button { width: 48%; padding: 0.75em; font-size: 1em; border-radius: 5px; border: none; background: #1976d2; color: #fff; cursor: pointer; }
     button:hover { background: #1565c0; }
     .qrbox { text-align: center; margin: 2em 0; }
-    .linkbox { text-align: center; margin-bottom: 2em; }
     .filebox, .acierbox { margin-bottom: 1em; }
     .button-row { display: flex; justify-content: space-between; gap: 4%; }
     .filename { text-align: center; font-size: 1.2em; font-weight: bold; margin-bottom: 1em; }
     .aciertype { text-align: center; font-size: 1em; margin-top: 1em; color: #555; }
+    .linkbox { text-align: center; margin-bottom: 2em; }
     @media print {
       body { background: #fff; }
       .container { box-shadow: none; }
-      .button-row { display: none; }
+      .button-row, h2, .linkbox { display: none !important; }
+      #page1 { display: none !important; }
+      #page2 {
+        display: flex !important;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 80vh;
+        background: #fff;
+        box-shadow: none;
+      }
+      .filename, .aciertype {
+        font-size: 2em !important;
+        font-weight: bold !important;
+        text-align: center !important;
+        margin-bottom: 1em !important;
+        color: #000 !important;
+      }
+      .qrbox {
+        margin: 1em 0 !important;
+      }
     }
   </style>
 </head>
