--- a/index.html
+++ b/index.html
@@ -7,11 +7,45 @@
   <!-- Librairie QRCode.js via CDN -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; }
-    .container { max-width: 400px; margin: 3em auto; background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 2px 8px #aaa; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      min-height: 100vh;
+      background: url('Radiation.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      /* fallback couleur si pas d'image */
+      background-color: #f2f2f2;
+    }
+    .container {
+      max-width: 400px;
+      width: 90vw;
+      margin: 3em auto;
+      background: rgba(255,255,255,0.92);
+      padding: 2em;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px #aaa;
+      backdrop-filter: blur(1px);
+    }
     label { font-weight: bold; }
-    input[type="text"] { width: 100%; padding: 0.5em; margin: 1em 0; border: 1px solid #ccc; border-radius: 5px; }
-    button { width: 48%; padding: 0.75em; font-size: 1em; border-radius: 5px; border: none; background: #1976d2; color: #fff; cursor: pointer; }
+    input[type="text"] {
+      width: 100%;
+      padding: 0.5em;
+      margin: 1em 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+    button {
+      width: 48%;
+      padding: 0.75em;
+      font-size: 1em;
+      border-radius: 5px;
+      border: none;
+      background: #1976d2;
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
     button:hover { background: #1565c0; }
     .qrbox { text-align: center; margin: 2em 0; }
     .filebox, .acierbox { margin-bottom: 1em; }
@@ -19,9 +53,33 @@
     .filename { text-align: center; font-size: 1.2em; font-weight: bold; margin-bottom: 1em; }
     .aciertype { text-align: center; font-size: 1em; margin-top: 1em; color: #555; }
     .linkbox { text-align: center; margin-bottom: 2em; }
+    @media (max-width: 600px) {
+      .container {
+        max-width: 98vw;
+        padding: 1em;
+        border-radius: 0.5em;
+      }
+      button {
+        width: 100%;
+        margin-bottom: 1em;
+      }
+      .button-row {
+        flex-direction: column;
+        gap: 0.5em;
+      }
+      .filename, .aciertype {
+        font-size: 1em;
+      }
+      .qrbox {
+        margin: 1em 0;
+      }
+    }
     @media print {
-      body { background: #fff; }
-      .container { box-shadow: none; }
+      body {
+        background: url('Radiation.jpeg') no-repeat center center;
+        background-size: cover;
+      }
+      .container { box-shadow: none; background: rgba(255,255,255,0.95); }
       .button-row, h2, .linkbox { display: none !important; }
       #page1 { display: none !important; }
       #page2 {
@@ -30,7 +88,7 @@
         justify-content: center;
         align-items: center;
         min-height: 80vh;
-        background: #fff;
+        background: rgba(255,255,255,0.95);
         box-shadow: none;
       }
       .filename, .aciertype {
